# MimeDetect

./: .gitignore  README.md  package-lock.json  package.json
lib/: index.html  index.js
lib/css/: style.css
native/: Cargo.toml  build.rs
native/src/: lib.rs  mime_db_regen.js  mime_types.rs
