[package]
name = "infer-wrapper"
version = "0.1.0"
authors = ["Marise Hayashi <@limitedeternity>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "infer_wrapper"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
infer = "0.1.6"
maplit = "1.0.2"

